<resources>
    <string name="app_name">Zerda|Reader</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="favorite">Favorite</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="Settings">settings</string>
    <string name="manage_subscriptions">Manage subscriptions</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="passwordAgain">password again</string>
    <string name="please_login">Please login</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="closed_email">closed_email</string>
    <string name="star">star</string>
    <string name="rss">rss</string>
    <string name="notfavorite">notFavorite</string>
    <string name="favorite_star">favorite_star</string>
    <string name="posted_on">posted on </string>
</resources>
