<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_back"
        android:title="@string/back"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/manage_subscriptions"
        android:title="@string/manage_subscriptions"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="5"/>


    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="6"/>

</menu>