<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.greenfox.fuchsit.zerdareader.activity.SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/greenfox_grey"
        android:id="@+id/imageView"
        android:layout_above="@+id/loginTitle"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupTitle"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/userName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_above="@+id/password"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true" />

    <EditText
        app:layout_widthPercent="50%"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:ems="10"
        android:textAlignment="center"
        android:id="@+id/password"
        android:textSize="24sp"
        tools:targetApi="jelly_bean"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        app:layout_widthPercent="50%"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick = "register"
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/aluminium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/login_error_appearance" />

</android.support.percent.PercentRelativeLayout>